--- a/config.env
+++ b/config.env
@@ -1,1 +1,3 @@
 DATABASE_PASSWORD=LZ4gCWNLK32KGdy
+MONGO_SHELL_CONNECTION=mongo "mongodb+srv://cluster0.y6h1y.gcp.mongodb.net/Loc8r" --username Janz
+CONNECTION_IN_PRODUCTION=NODE_ENV=production MONGODB_URL='mongodb+srv://Janz:LZ4gCWNLK32KGdy@cluster0.y6h1y.gcp.mongodb.net/Loc8r?retryWrites=true&w=majority' nodemon
